bk_ida/gobmkida/g3/find_cap
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/find_cap/src/engine/reading.c:3717:7: error: use of undeclared identifier 'CSWTCH_588'
v20 = CSWTCH_588[defense]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/find_cap/src/engine/reading.c:3727:12: error: use of undeclared identifier 'CSWTCH_588'
savecode = CSWTCH_588[defense]; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/find_cap/src/engine/reading.c:3749:7: error: use of undeclared identifier 'CSWTCH_588'
v16 = CSWTCH_588[v25]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/find_cap/src/engine/reading.c:3754:12: error: use of undeclared identifier 'CSWTCH_588'
savecode = CSWTCH_588[v25]; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/find_cap/src/engine/reading.c:3776:7: error: use of undeclared identifier 'CSWTCH_588'
v18 = CSWTCH_588[v17]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/find_cap/src/engine/reading.c:3791:12: error: use of undeclared identifier 'CSWTCH_588'
savecode = CSWTCH_588[v17]; 
           ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/find_cap/src/obj/1/reading.o] Error 1
